--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,4 @@ language: objective-c
 osx_image: xcode7.1
 xcode_workspace: Scenarios.xcworkspace
 xcode_scheme: Scenarios-iOS
+xcode_sdk: iphonesimulator9.1
