--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ osx_image: xcode7.1
 install: gem install xcpretty
 script:
   >
-    xcodebuild test \
+    xcodebuild clean test \
       -workspace Scenarios.xcworkspace \
       -scheme Scenarios-iOS \
       -destination "platform=iOS Simulator,name=iPhone 6s" \
