--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,4 @@
 language: objective-c
 osx_image: xcode7.1
 install: gem install xcpretty
-script:
-  >
-    xcodebuild clean test \
-      -workspace Scenarios.xcworkspace \
-      -scheme Scenarios-iOS \
-      -destination "platform=iOS Simulator,name=iPhone 6s" \
-    | xcpretty -c \
-    ; exit ${PIPESTATUS[0]}
-
+script: rake
