--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: objective-c
-osx_image: xcode7.1
-install: gem install xcpretty
+osx_image: xcode7.2
+install:
+  - brew update && brew install carthage
+  - gem install xcpretty
+before_script: carthage bootstrap --platform iphoneos
 script: rake
