Add rake test action, differentiated from rake test:all
The default action is now `test`, which only runs the specs and UI tests
via Xcode, to avoid running the specs a second time via swiftpm.

CI now explicitly runs the new `test:all` action.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ install:
   - brew update && brew uninstall --force carthage && brew install carthage
   - gem install xcpretty
 before_script: carthage bootstrap --platform iphoneos
-script: rake
+script: rake test:all
