--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-language: objective-c
-osx_image: xcode9.4
+os: osx
+osx_image: xcode10.2
 install:
-  - brew update && brew uninstall --force carthage && brew install carthage
+  - brew bundle
   - gem install xcpretty
-before_script: carthage bootstrap --platform iphoneos
+before_script: carthage bootstrap --platform iOS
 script: rake test:all
